<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/profileHeadline_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/your_profile"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/userTotalPoints_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/point_score"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_editTxt" />

    <TextView
        android:id="@+id/level_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/level"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/userTotalPoints_txtView" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="274dp"
        android:layout_height="135dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_txtView">

        <TextView
            android:id="@+id/profileRank_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/rank"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/profileMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileRank_txtView"
            android:text="@string/month"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profileRankMonth_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/profileMonth"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            tools:text="Month" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/profileRankMonth_txtView"
            android:background="#429143" />

        <TextView
            android:id="@+id/profileSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileMonth"
            android:layout_marginTop="5dp"
            android:text="@string/semester"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profileRankSemester_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/profileSemester"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            tools:text="Semester" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/profileRankSemester_txtView"
            android:background="#429143" />

        <TextView
            android:id="@+id/profileAllTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileSemester"
            android:layout_marginTop="5dp"
            android:text="@string/all_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profileRankAllTime_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/profileAllTime"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            tools:text="All time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/profileRankAllTime_txtView"
            android:background="#429143" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageLevel"
        android:layout_width="184dp"
        android:layout_height="159dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imageLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/planet" />

    <Button
        android:id="@+id/profileHistoryButton_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/view_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLevel" />


    <EditText
        android:id="@+id/userName_editTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/enter_user_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeadline_txtView" />


</androidx.constraintlayout.widget.ConstraintLayout>